1497390325 | 54 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libengine2_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libicui18n_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libicuuc_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libmaterialsystem2_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libnetworksystem_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libpanorama_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libpanorama_text_pango_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libpanoramauiclient_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libparticles_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librendersystemgl_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/librendersystemvulkan_strings.txt,  M tools/steamvr_environments
https://steamdb.info/patchnotes/1901099/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/vr_community_home.xml
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/vr_community_home.xml
@@ -133,11 +133,12 @@
 					</Panel>
 					<Panel class="Valve_Promotion" onactivate="ShowValveItems()">
 						<Image class="PromoImage" src="s2r://panorama/images/content_browser/valve_promo_png.vtex" />			
+						<Image class="VivePromoImage" src="s2r://panorama/images/content_browser/valve_promo_small_png.vtex" />
 						<Label class="PromoTitle" text="#ValvePromoTitle"/>
 						<Label class="PromoDesc" text="#ValvePromoDesc"/>
 					</Panel>
-					<Panel class="HTC_Promotion">
-						<Image class="PromoImage" src="s2r://panorama/images/content_browser/vive_promo_png.vtex" scaling="stretch-to-fit-preserve-aspect" />	
+					<Panel class="HTC_Promotion" onactivate="ShowViveItems()">
+						<Image class="VivePromoImage" src="s2r://panorama/images/content_browser/vive_promo_png.vtex"/>	
 						<Label class="PromoTitle" text="#HTCPromoTitle"/>
 						<Label class="PromoDesc" text="#HTCPromoDesc"/>
 					</Panel>
@@ -156,6 +157,23 @@
 							</Panel>
 						</Panel>
 					</Panel>
+
+					<Panel class="VivePromoWrapper">
+						<Panel class="VivePromoDialog">
+							<Panel class="DialogTitleBar">
+								<Label class="DialogTitle" text="#VivePromoTitle"/>
+								<Button class="CloseDialogButton" onactivate="HideViveItems()">
+									<Image class="CloseDialogButtonImage" src="s2r://panorama/images/content_browser/icon_unsubscribe_png.vtex" />	
+								</Button>	
+							</Panel>
+							<Panel class="DialogPromoImages">
+								<Label class="DialogDesc" text="#VivePromoDesc"/>
+								<Image class="DialogPromoImage" src="s2r://panorama/images/contentdb/vive_headset_png.vtex" />
+								<Image class="DialogPromoImage" src="s2r://panorama/images/contentdb/vive_logo_statue_png.vtex" />
+							</Panel>
+						</Panel>
+					</Panel>
+										
 				</Panel>
 
 			</Panel>
