--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css
@@ -5108,6 +5108,41 @@ AvatarCustomizationItem #SliderThumb
 	visibility: collapse;	
 }
 
+// special overrides
+.item_def_vive_controllers,
+.item_def_touch_controllers,
+.item_def_knuckles_controllers,
+.item_def_more_fingers_test
+{
+	visibility: collapse;
+}
+
+.ViveController .item_def_vive_controllers
+{
+	visibility: visible;
+}
+.TouchController .item_def_touch_controllers
+{
+	visibility: visible;
+}
+.KnucklesController .item_def_knuckles_controllers,
+.KnucklesController .item_def_more_fingers_test
+{
+	visibility: visible;
+}
+
+.item_def_vive_headset,
+.ItemPhysicsProp.item_def_vive_logo_statue
+{
+	visibility: collapse;
+}
+
+.HMD_Manufacturer_HTC .AvatarsTab .item_def_vive_headset,
+.HMD_Manufacturer_HTC .PropsOn .item_def_vive_logo_statue
+{
+	visibility: visible;
+}
+
 /*---------------------------
   ITEM DETAIL VIEW: RIGHT
 ---------------------------*/
