1498513855 | 28 files | M bin/version.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/content_browser_item.xml,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_bulgarian.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_german.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_hungarian.txt,  M tools/steamvr_environments
https://steamdb.info/patchnotes/1918060/

--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/content_browser_item.xml
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/content_browser_item.xml
@@ -21,6 +21,7 @@
 		<Image class="FavoriteItemStar" src="s2r://panorama/images/content_browser/icon_favorite_shadow_png.vtex" />	
 			
 		<Image class="ItemToolIcon" src="s2r://panorama/images/content_browser/icon_tool_png.vtex" />	
+		<Image class="PromoItemIcon" src="s2r://panorama/images/content_browser/ico_collectibles_png.vtex" />		
 
 		<Panel class="SaveGameIcon">
 			<Image class="SaveGameImage" src="s2r://panorama/images/content_browser/save_icon_png.vtex" />
