1497390325 | 60 files | M bin/version.txt,  M content/panorama/localization/tenfoot_english.txt,  M content/panorama/localization/tenfoot_finnish.txt,  M content/panorama/localization/tenfoot_thai.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_czech.txt,  M content/vrmonitor/translations/vrmonitor_errors_danish.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_finnish.txt,  M content/vrmonitor/translations/vrmonitor_errors_french.txt,  M content/vrmonitor/translations/vrmonitor_errors_greek.txt,  M content/vrmonitor/translations/vrmonitor_errors_hungarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_italian.txt,  M content/vrmonitor/translations/vrmonitor_errors_j
https://steamdb.info/patchnotes/1939281/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/friends.xml
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/friends.xml
@@ -198,27 +198,26 @@
 										<DestinationsScrollPanel class="FriendsLeft" id="LobbyScrollContainer"  >			           
 												<Button class="DestinationButton" id="HostRoomButton" onactivate="OpenHostDialog(); SetInputFocus(CloseHostDialog);" mousecanactivate="unfocused" >
 														<Label class="OpenLobby" text="#HostRoomButton" />
-								<Image class="OpenLobbyIcon" src="s2r://panorama/images/content_browser/friends_toggle_button_png.vtex" />
+														<Image class="OpenLobbyIcon" src="s2r://panorama/images/content_browser/friends_toggle_button_png.vtex" />
 												</Button>	
 
 												<Panel class="FriendsContentContainer">
 														<Panel class="ContentContainer" id="LobbiesContentContainer" tabindex="auto" selectionpos="auto" rememberchildfocus="true" />
 												</Panel>
 
-							<Panel class="WorldPanelLobbyButtons">
-								<Button class="DestinationButton" id="LeaveLobbyButton" onactivate="LeaveLobby();" mousecanactivate="unfocused" >
-														<Label class="LobbyButtonLabel" id="LeaveLobbyLabel" text="#Lobby_Leave" />
-												</Button>
-												<Button class="DestinationButton" id="CloseLobbyButton" onactivate="OpenConfirmationDialog();" mousecanactivate="unfocused" >
-														<Label class="LobbyButtonLabel" text="#Lobby_Close" />
-												</Button>
-												<Button class="DestinationButton" id="QuickCloseLobbyButton" onactivate="LeaveLobby();">
-														<Label class="LobbyButtonLabel" text="#Lobby_Close" />
-												</Button>
-							</Panel>
-
-
-		                	                
+												<Panel class="WorldPanelLobbyButtons">
+													<Button class="DestinationButton" id="LeaveLobbyButton" onactivate="LeaveLobby();" mousecanactivate="unfocused" >
+																			<Label class="LobbyButtonLabel" id="LeaveLobbyLabel" text="#Lobby_Leave" />
+																	</Button>
+																	<Button class="DestinationButton" id="CloseLobbyButton" onactivate="OpenConfirmationDialog();" mousecanactivate="unfocused" >
+																			<Label class="LobbyButtonLabel" text="#Lobby_Close" />
+																	</Button>
+																	<Button class="DestinationButton" id="QuickCloseLobbyButton" onactivate="LeaveLobby();">
+																			<Label class="LobbyButtonLabel" text="#Lobby_Close" />
+																	</Button>
+												</Panel>
+                	                
+                	                			<Label class="BetaDesc" text="#Beta_Desc" />
 
 										</DestinationsScrollPanel>
 	
