1507941678 | 8 files | M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/vr_community_home.xml,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/scripts/community_home.js,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/scripts/community_home_item.js,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/steamvr_community_item.css,  M tools/steamvr_environments/game/steamtours/pak02_dir/scripts/contentdb.txt
https://steamdb.info/patchnotes/2233231/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/steamvr_community_item.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/steamvr_community_item.css
@@ -276,11 +276,13 @@
 	visibility: collapse;
 }
 
-.environments .EnvironmentDetail
+.environments .EnvironmentDetail,
+.vive_promo_environment .EnvironmentDetail
 {
 	visibility: visible;
 }
-.environments .CommunityItem
+.environments .CommunityItem,
+.vive_promo_environment .CommunityItem
 {
 	visibility: collapse;
 }
@@ -582,6 +584,11 @@
 	flow-children: right;
 }
 
+.vive_promo_environment .EnvironmentControls
+{
+	width: 170px;
+}
+
 .EnvironmentControls Button
 {
 	margin: 0px;
@@ -602,6 +609,12 @@
 .EnvironmentControls .NextButton
 {
 	//margin-right: 70px;
+}
+
+.vive_promo_environment .PreviousButton,
+.vive_promo_environment .NextButton
+{
+	visibility: collapse;
 }
 
 /*------------------
