1507941678 | 33 files | M tools/steamvr_environments/game/bin/linuxsteamrt64/libvr_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_bulgarian.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_dutch.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_ge
https://steamdb.info/patchnotes/2269150/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/steamvr_community_home.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/steamvr_community_home.css
@@ -513,9 +513,11 @@
 
 .ValveEnvironmentsDialog
 {
-	//width: 2020px;
-	width: 2340px;
-	height: 1030px;
+	//width: 2340px;
+	//height: 1030px;
+	width: 2020px;
+	height: 1300px;
+	margin-bottom: 100px;
 	vertical-align: center;
 	horizontal-align: center;
 	background-color: #111111ff;
@@ -553,8 +555,8 @@
 	height: 120px;
 	margin-top: 50px;
 	//horizontal-align: right;
-	//margin-left: 1850px;
-	margin-left: 2150px;
+	margin-left: 1850px;
+	//margin-left: 2150px;
 	border: 1px solid #ffffff00;
 	transition-property: background-color, border, pre-transform-scale2d;
 	transition-duration: 0.23s;
