1510619449 | 11 files | M tools/steamvr_environments/game/bin/linuxsteamrt64/libengine2_strings.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libvr_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libserver_strings.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/tutorial.xml,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/recent_apps.css,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/tutorial.css,  M tools/steamvr_environments/game/steamtours/pak02_dir/scripts/contentdb.txt
https://steamdb.info/patchnotes/2288276/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css
@@ -5508,6 +5508,7 @@ AvatarCustomizationItem #SliderThumb
 .item_def_touch_controllers,
 .item_def_knuckles_controllers,
 .item_def_windowsmr_controllers,
+.item_def_windowsmr_samsung_controllers,
 .item_def_generic_tracked_controllers,
 .item_def_more_fingers_test
 {
@@ -5528,6 +5529,10 @@ AvatarCustomizationItem #SliderThumb
 	visibility: visible;
 }
 .WinMRController .item_def_windowsmr_controllers
+{
+	visibility: visible;
+}
+.WinMRControllerSamsung .item_def_windowsmr_samsung_controllers
 {
 	visibility: visible;
 }
