--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/tutorial.xml
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/layout/tutorial.xml
@@ -101,44 +101,49 @@
 					<Panel class="TutorialTile ViveHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialwelcome_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialWelcome_Tile2_Desc" />
-
 					</Panel>
 					<Panel class="TutorialTile ViveHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialwelcome_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialWelcome_Tile3_Desc" />
-
 					</Panel>
 
 					<Panel class="TutorialTile TouchHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialwelcome_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>												
 						<Label class="TutorialDesc" text="#TutorialWelcome_Tile1_Touch_Desc" />
-
 					</Panel>
 					<Panel class="TutorialTile TouchHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialwelcome_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialWelcome_Tile2_Touch_Desc" />
-
 					</Panel>
 					<Panel class="TutorialTile TouchHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialwelcome_touch_3_png.vtex" />		
 						<Label class="TutorialDesc" text="#TutorialWelcome_Tile3_Touch_Desc" />
-
 					</Panel>
 					
 					<Panel class="TutorialTile ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialwelcome_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>												
 						<Label class="TutorialDesc" text="#TutorialWelcome_Tile1_Controller_Desc" />
-
 					</Panel>
 					<Panel class="TutorialTile ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialwelcome_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialWelcome_Tile2_Controller_Desc" />
-
 					</Panel>
 					<Panel class="TutorialTile ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialwelcome_controller_3_png.vtex" />		
 						<Label class="TutorialDesc" text="#TutorialWelcome_Tile3_Controller_Desc" />
+					</Panel>
 
+					<Panel class="TutorialTile WinMRHelp">
+						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialwelcome_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>
+						<Label class="TutorialDesc" text="#TutorialWelcome_Tile1_Desc" />
+					</Panel>
+					<Panel class="TutorialTile WinMRHelp">
+						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialwelcome_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>
+						<Label class="TutorialDesc" text="#TutorialWelcome_Tile2_Desc" />
+					</Panel>
+					<Panel class="TutorialTile WinMRHelp">
+						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialwelcome_winmr_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>
+						<Label class="TutorialDesc" text="#TutorialWelcome_Tile3_Desc" />
 					</Panel>
 				</DestinationsScrollPanel>
 				
@@ -180,7 +185,6 @@
 					<Panel class="TutorialTile ViveHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialteleport_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialTeleport_Tile2_Desc" />
-
 					</Panel>
 					<Panel class="TutorialTile ViveHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialteleport_3_png.vtex" scaling="stretch-to-fit-preserve-aspect" />		
@@ -194,7 +198,6 @@
 					<Panel class="TutorialTile TouchHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialteleport_touch_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialTeleport_Tile2_Touch_Desc" />
-
 					</Panel>
 					<Panel class="TutorialTile TouchHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialteleport_3_png.vtex" scaling="stretch-to-fit-preserve-aspect" />		
@@ -204,18 +207,29 @@
 					<Panel class="TutorialTile ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialteleport_controller_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialTeleport_Tile1_Controller_Desc" />
-
 					</Panel>
 					<Panel class="TutorialTile ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialteleport_controller_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>								
 						<Label class="TutorialDesc" text="#TutorialTeleport_Tile2_Controller_Desc" />
-
 					</Panel>
 					<Panel class="TutorialTile ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialteleport_controller_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>	
 						<Label class="TutorialDescEnd" text="#TutorialTeleport_Tile3_Controller_Desc" />
 					</Panel>
-					
+
+					<Panel class="TutorialTile WinMRHelp">
+						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialteleport_winmr_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>
+						<Label class="TutorialDesc" text="#TutorialTeleport_Tile1_Touch_Desc" />
+					</Panel>
+					<Panel class="TutorialTile WinMRHelp">
+						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialteleport_winmr_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>
+						<Label class="TutorialDesc" text="#TutorialTeleport_Tile2_Touch_Desc" />
+					</Panel>
+					<Panel class="TutorialTile WinMRHelp">
+						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialteleport_3_png.vtex" scaling="stretch-to-fit-preserve-aspect" />
+						<Label class="TutorialDesc" text="#TutorialTeleport_Tile3_Touch_Desc" />
+					</Panel>
+
 				</DestinationsScrollPanel>
 				
 				<Panel class="TutorialBottom">
@@ -249,16 +263,16 @@
 								
 				<DestinationsScrollPanel class="TutorialTiles" id="TutorialPage3Scroll" overscroll-y="100" target="TutorialPage3">
 					
-					<Panel class="TutorialTile ViveHelp TouchHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialquest_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>												
 						<Label class="TutorialDesc" text="#TutorialQuest_Tile1_Desc" />
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialquest_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialQuest_Tile2_Desc" />
 
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialquest_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialQuest_Tile3_Desc" />
 					</Panel>
@@ -296,16 +310,16 @@
 								
 				<DestinationsScrollPanel class="TutorialTiles" id="TutorialPage1Scroll" overscroll-y="100" target="TutorialPage1">
 			
-					<Panel class="TutorialTile ViveHelp TouchHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialavatar_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>												
 						<Label class="TutorialDesc" text="#TutorialAvatar_Tile1_Desc" />
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialavatar_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialAvatar_Tile2_Desc" />
 
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialavatar_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialAvatar_Tile3_Desc" />
 					</Panel>
@@ -343,16 +357,16 @@
 								
 				<DestinationsScrollPanel class="TutorialTiles" id="TutorialPage1Scroll" overscroll-y="100" target="TutorialPage1">
 					
-					<Panel class="TutorialTile ViveHelp TouchHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialprops_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>												
 						<Label class="TutorialDesc" text="#TutorialProps_Tile1_Desc" />
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialprops_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialProps_Tile2_Desc" />
 
 					</Panel>
-					<Panel class="TutorialTile ViveHelp">
+					<Panel class="TutorialTile ViveHelp WinMRHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialprops_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialProps_Tile3_Desc" />
 					</Panel>
@@ -360,7 +374,7 @@
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialprops_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialProps_Tile3_Touch_Desc" />
 					</Panel>
-					
+
 				</DestinationsScrollPanel>
 				
 				<Panel class="TutorialBottom">
@@ -394,16 +408,16 @@
 								
 				<DestinationsScrollPanel class="TutorialTiles" id="TutorialPage1Scroll" overscroll-y="100" target="TutorialPage1">
 			
-					<Panel class="TutorialTile ViveHelp TouchHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialtools_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>												
 						<Label class="TutorialDesc" text="#TutorialTools_Tile1_Desc" />
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialtools_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialTools_Tile2_Desc" />
 
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialtools_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialTools_Tile3_Desc" />
 					</Panel>
@@ -441,16 +455,16 @@
 								
 				<DestinationsScrollPanel class="TutorialTiles" id="TutorialPage1Scroll" overscroll-y="100" target="TutorialPage1">
 			
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialpublic_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>												
 						<Label class="TutorialDesc" text="#TutorialPublic_Tile1_Desc" />
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelpControllerHelp ">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialpublic_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialPublic_Tile2_Desc" />
 
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialpublic_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialPublic_Tile3_Desc" />
 					</Panel>
@@ -488,16 +502,16 @@
 								
 				<DestinationsScrollPanel class="TutorialTiles" id="TutorialPage1Scroll" overscroll-y="100" target="TutorialPage1">
 			
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialprivate_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>												
 						<Label class="TutorialDesc" text="#TutorialPrivate_Tile1_Desc" />
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialprivate_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialPrivate_Tile2_Desc" />
 
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialprivate_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialPrivate_Tile3_Desc" />
 					</Panel>
@@ -535,16 +549,16 @@
 								
 				<DestinationsScrollPanel class="TutorialTiles" id="TutorialPage1Scroll" overscroll-y="100" target="TutorialPage1">
 			
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialsocial_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>												
 						<Label class="TutorialDesc" text="#TutorialSocial_Tile1_Desc" />
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialsocial_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialSocial_Tile2_Desc" />
 
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialsocial_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialSocial_Tile3_Desc" />
 					</Panel>
@@ -582,16 +596,16 @@
 								
 				<DestinationsScrollPanel class="TutorialTiles" id="TutorialPage1Scroll" overscroll-y="100" target="TutorialPage1">
 			
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialmulti_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>												
 						<Label class="TutorialDesc" text="#TutorialMultiTool_Tile1_Desc" />
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialmulti_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialMultiTool_Tile2_Desc" />
 
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialmulti_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialMultiTool_Tile3_Desc" />
 					</Panel>
@@ -629,16 +643,16 @@
 								
 				<DestinationsScrollPanel class="TutorialTiles" id="TutorialPage1Scroll" overscroll-y="100" target="TutorialPage1">
 			
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialsaved_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>												
 						<Label class="TutorialDesc" text="#TutorialSaved_Tile1_Desc" />
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialsaved_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialSaved_Tile2_Desc" />
 
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialsaved_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialSaved_Tile3_Desc" />
 					</Panel>
@@ -676,16 +690,16 @@
 								
 				<DestinationsScrollPanel class="TutorialTiles" id="TutorialPage1Scroll" overscroll-y="100" target="TutorialPage1">
 			
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialhome_1_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>												
 						<Label class="TutorialDesc" text="#TutorialHome_Tile1_Desc" />
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialhome_2_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialHome_Tile2_Desc" />
 
 					</Panel>
-					<Panel class="TutorialTile ViveHelp TouchHelp ControllerHelp">
+					<Panel class="TutorialTile ViveHelp TouchHelp WinMRHelp ControllerHelp">
 						<Image class="TutorialImage" src="s2r://panorama/images/tutorial/tutorialhome_3_png.vtex" scaling="stretch-to-fit-preserve-aspect"/>		
 						<Label class="TutorialDesc" text="#TutorialHome_Tile3_Desc" />
 					</Panel>
