--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/recent_apps.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/recent_apps.css
@@ -370,7 +370,8 @@ SteamToursRecentApps.Hidden
 .GamepadController .PressYButton,
 .TouchController .TouchImage,
 .TouchController .PressBButton,
-.WinMRController .WinMRImage
+.WinMRController .WinMRImage,
+.WinMRControllerSamsung .WinMRImage
 {
 	visibility: visible;	
 }
@@ -414,7 +415,8 @@ SteamToursRecentApps.Hidden
 	margin-left: 450px;
 }
 
-.WinMRController .GlowAnim
+.WinMRController .GlowAnim,
+.WinMRControllerSamsung .GlowAnim
 {
 	width: 50px;
 	height: 50px;
