1511294946 | 14 files | M Protobufs/steamtours_clientmessages.proto,  M bin/version.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libclient_strings.txt,  M tools/steamvr_environments/game/steamtours/bin/linuxsteamrt64/libserver_strings.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/base_world_panel.css,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/content_browser.css,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/friends.css,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/puppet.css,  M tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/recent_apps.css,  M tools/steamvr_environments/game/steamtours/pak02_dir/scripts/contentdb.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir/soundevents/destinations_core.vsndevts, ?? tools/steamvr_media_player/
https://steamdb.info/patchnotes/2308396/

--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/base_world_panel.css
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/styles/base_world_panel.css
@@ -8,7 +8,18 @@
 }
 
 // when the panel is grabbed, we make it "glow"
-.Glowing {
+.Glowing
+{
 	//box-shadow: inset #a3cf06aa 12px 12px 2px 24px;
 	box-shadow: inset #ffffffaa 4px 4px 2px 8px;
+}
+
+.Visible 
+{
+	opacity: 1;
+}
+
+.Hidden
+{
+	opacity: 0;
 }
